# graph_rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  check.sh  serve.sh
.github/workflows/: destroy.yml  main.yml
src/: application.rs  grapher.rs  handler.rs  main.rs
src/application/: femtovg_init.rs  handler.rs  parser.rs
src/grapher/: equation.rs  graph.rs
src/handler/: handler.rs
terraform/: lightsail.tf  vars.tf
terraform/ecr/: ecr.tf  main.tf  repository-policy.json  vars.tf
terraform/main/: ecr.tf  lightsail.tf  main.tf
wasm/: index.html
