[package]
name = "graph"
version = "0.1.0"
edition = "2021"

[dependencies]
femtovg = "0.10.1"
winit = { version = "0.30.5", default-features = false }
# glutin = "0.32.1"
# glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
regex = "1.11.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.32.1"
glutin-winit = "0.5.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_sys = { version = "0.3", package = "web-sys", features = [
  "WebGlContextAttributes",
  "HtmlImageElement",
  "WebGl2RenderingContext",
] }
wasm-bindgen = "0.2.99"
